[tool.poetry]
name = "cargo"
version = "1.1.1"
description = "A data-centric transformation of monoliths into microservices"
authors = ["Rahul Krishna"]
license = "Apache Software License"
readme = "README.md"
homepage = "https://github.com/ibm/codenet-minerva-cargo"
repository = "https://github.com/ibm/codenet-minerva-cargo"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.9"
scipy = "^1.12.0"
py2neo = "^2021.2.4"
numpy = "^1.26.4"
pandas = "^2.2.1"
networkx = "^3.2.1"
tqdm = "^4.66.2"
scikit-learn = "^1.4.1.post1"
black = "^22.1.0"
mo-sql-parsing = "^10.499.24023"
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
nose = "1.3.7"
pinocchio = "0.4.3"
coverage = "6.3.2"
pylint = "2.13"
ipdb = "^0.13.13"

[tool.poetry.scripts]
minerva-cargo = "cargo.standalone:app"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
